# solana-mev-bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
config/: default.toml  devnet.toml
crates/account-cache/: Cargo.toml
crates/account-cache/src/: cache.rs  invalidation.rs  lib.rs  prefetch.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  constants.rs  errors.rs  types.rs
crates/data-feed/: Cargo.toml
crates/data-feed/src/: account_update.rs  filters.rs  laserstream.rs  lib.rs  slot_tracker.rs  tx_stream.rs  vault_tracker.rs
crates/dex-adapters/: Cargo.toml
crates/dex-adapters/src/: lib.rs  meteora_dlmm.rs  orca_whirlpool.rs  phoenix.rs  raydium_amm.rs  raydium_clmm.rs  traits.rs
crates/dex-adapters/src/math/: constant_product.rs  mod.rs  optimizer.rs
crates/executor/: Cargo.toml
crates/executor/src/: bundle.rs  helius_sender.rs  jito_client.rs  lib.rs  status_tracker.rs  tip_calculator.rs  tx_builder.rs
crates/lending-adapters/: Cargo.toml
crates/lending-adapters/src/: kamino.rs  lib.rs  marginfi.rs  save.rs  traits.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: latency.rs  lib.rs  pnl.rs  prometheus_exporter.rs
crates/mev-bot/: Cargo.toml
crates/mev-bot/src/: main.rs
crates/price-graph/: Cargo.toml
crates/price-graph/src/: bellman_ford.rs  graph.rs  lib.rs  path.rs  tokens.rs
crates/risk/: Cargo.toml
crates/risk/src/: blacklist.rs  circuit_breaker.rs  gas_estimator.rs  lib.rs  limits.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: backrun.rs  dex_arb.rs  lib.rs  liquidation.rs  traits.rs
