[package]
name = "mev-account-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mev-common = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
