[package]
name = "mev-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
solana-sdk = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bs58 = { workspace = true }
anyhow = { workspace = true }
