[package]
name = "mev-data-feed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mev-common = { workspace = true }
helius-laserstream = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
