[package]
name = "mev-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mev-common = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
jito-sdk-rust = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
