[package]
name = "mev-risk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mev-common = { workspace = true }
solana-sdk = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
